--- a/clusters/cl02do/services/loki/values.yaml
+++ b/clusters/cl02do/services/loki/values.yaml
@@ -29,7 +29,7 @@ promtail:
   serviceMonitor:
     enabled: true
     prometheusRule:
-      enabled: true
+      enabled: false
   config:
     clients:
       - url: http://loki-gateway/loki/api/v1/push
