change storage app set to serversideapply

--- a/clusters/cl02do/deployment/stack/values.yaml
+++ b/clusters/cl02do/deployment/stack/values.yaml
@@ -57,7 +57,7 @@ applicationSet:
       syncOptions:
         - CreateNamespace=true
         - ApplyOutOfSyncOnly=true
-        - ServerSideApply=false
+        - ServerSideApply=true
         - PruneLast=true        
 application:
   prometheusOperatorCrds:
