disable grafana agent

--- a/clusters/cl02do/services/loki/values.yaml
+++ b/clusters/cl02do/services/loki/values.yaml
@@ -14,7 +14,7 @@ loki:
       enabled: true
     selfMonitoring:
       grafanaAgent:
-        installOperator: true
+        installOperator: false
   ingress:
     enabled: false
   gateway:
