--- a/clusters/cl02do/platform/authentik/values.yaml
+++ b/clusters/cl02do/platform/authentik/values.yaml
@@ -71,6 +71,13 @@ postgres-cluster:
       repository: ghcr.io/cloudnative-pg/postgresql
       tag: 16.2
     instances: 2
+    resources:
+      requests:
+        memory: 256Mi
+        cpu: 50m
+      limits:
+        memory: 1Gi
+        cpu: 100m 
     storage:
       data:
         storageClass: do-block-storage
