change authentik url

--- a/clusters/cl02do/platform/authentik/values.yaml
+++ b/clusters/cl02do/platform/authentik/values.yaml
@@ -49,11 +49,11 @@ authentik:
         traefik.ingress.kubernetes.io/router.tls: "true"
         cert-manager.io/cluster-issuer: letsencrypt-issuer
       hosts:
-        - authentik.alexlebens.dev
+        - auth.alexlebens.dev
       tls:
         - secretName: authentik-secret-tls
           hosts:
-            - authentik.alexlebens.dev
+            - auth.alexlebens.dev
   worker:
     name: worker
     replicas: 1
