skip verify api server metrics

--- a/clusters/cl02do/services/kube-prometheus-stack/values.yaml
+++ b/clusters/cl02do/services/kube-prometheus-stack/values.yaml
@@ -16,6 +16,9 @@ kube-prometheus-stack:
     externalUrl: https://alertmanager.alexlebens.dev
   grafana:
     enabled: false
+  kubeApiServer:
+    tlsConfig:
+      insecureSkipVerify: true    
   kube-state-metrics:
     selfMonitor:
       enabled: true
