change to use managed database

--- a/clusters/cl02do/platform/authentik/templates/external-secret.yaml
+++ b/clusters/cl02do/platform/authentik/templates/external-secret.yaml
@@ -26,7 +26,7 @@ spec:
 apiVersion: external-secrets.io/v1beta1
 kind: ExternalSecret
 metadata:
-  name: postgresql-authentik-cluster-backup-secret
+  name: postgresql-cl02do-authentik-secret
   namespace: {{ .Release.Namespace }}
   labels:
     app.kubernetes.io/name: {{ .Release.Name }}
@@ -39,17 +39,59 @@ spec:
     kind: ClusterSecretStore
     name: vault
   data:
-    - secretKey: ACCESS_KEY_ID
+    - secretKey: host
       remoteRef:
         conversionStrategy: Default
         decodingStrategy: None
-        key: /digital-ocean/alexlebens-dev/auth
+        key: /digital-ocean/alexlebens-dev/authentik
         metadataPolicy: None
-        property: ACCESS_KEY_ID
-    - secretKey: ACCESS_SECRET_KEY
+        property: host
+    - secretKey: database
       remoteRef:
         conversionStrategy: Default
         decodingStrategy: None
-        key: /digital-ocean/alexlebens-dev/auth
+        key: /digital-ocean/alexlebens-dev/authentik
         metadataPolicy: None
-        property: ACCESS_SECRET_KEY
+        property: database
+    - secretKey: user
+      remoteRef:
+        conversionStrategy: Default
+        decodingStrategy: None
+        key: /digital-ocean/alexlebens-dev/authentik
+        metadataPolicy: None
+        property: user
+    - secretKey: password
+      remoteRef:
+        conversionStrategy: Default
+        decodingStrategy: None
+        key: /digital-ocean/alexlebens-dev/authentik
+        metadataPolicy: None
+        property: password
+    - secretKey: port
+      remoteRef:
+        conversionStrategy: Default
+        decodingStrategy: None
+        key: /digital-ocean/alexlebens-dev/authentik
+        metadataPolicy: None
+        property: port
+    - secretKey: pgbouncer
+      remoteRef:
+        conversionStrategy: Default
+        decodingStrategy: None
+        key: /digital-ocean/alexlebens-dev/authentik
+        metadataPolicy: None
+        property: pgbouncer
+    - secretKey: sslmode
+      remoteRef:
+        conversionStrategy: Default
+        decodingStrategy: None
+        key: /digital-ocean/alexlebens-dev/authentik
+        metadataPolicy: None
+        property: sslmode
+    - secretKey: sslrootcert
+      remoteRef:
+        conversionStrategy: Default
+        decodingStrategy: None
+        key: /digital-ocean/alexlebens-dev/authentik
+        metadataPolicy: None
+        property: sslrootcert
