--- a/clusters/cl02do/platform/authentik/templates/config-map.yaml
+++ b/clusters/cl02do/platform/authentik/templates/config-map.yaml
@@ -19,7 +19,7 @@ data:
 
     /* Remove background */
     .pf-c-login__main {
-      background-color: transparent;
+      background-color: rgba(3, 3, 3, 0.16);
     }
 
     /* Remove specific height */
@@ -39,7 +39,22 @@ data:
       color: black;
     }
 
-    /* Center text */
-    ak-loading-overlay {
+    /* Force border color */
+    .pf-c-form-control {
+      border-color: white;
+    }
+
+    /* Use default cursor on this div */
+    .pf-c-form__label {
+      cursor: default;
+    }
+
+    /* Hide required asterik */
+    .pf-c-form__label-required {
       display: none;
+    }
+
+    /* Change link color to white */
+    .a {
+      color: white;
     }
