add resources to prometheus operator

--- a/clusters/cl02do/services/kube-prometheus-stack/values.yaml
+++ b/clusters/cl02do/services/kube-prometheus-stack/values.yaml
@@ -25,6 +25,13 @@ kube-prometheus-stack:
   prometheusOperator:
     admissionWebhooks:
       enabled: true
+    resources:
+      limits:
+        cpu: 300m
+        memory: 300Mi
+      requests:
+        cpu: 100m
+        memory: 100Mi      
     namespaces:
       releaseNamespace: true
       additional:
