--- a/clusters/cl02do/services/kube-prometheus-stack/values.yaml
+++ b/clusters/cl02do/services/kube-prometheus-stack/values.yaml
@@ -43,6 +43,13 @@ kube-prometheus-stack:
   prometheus:
     ingress:
       enabled: false
+    resources:
+      limits:
+        cpu: 300m
+        memory: 300Mi
+      requests:
+        cpu: 100m
+        memory: 100Mi          
     prometheusSpec:
       scrapeInterval: 30s
       retention: 7d
