--- a/clusters/cl02do/deployment/stack/templates/application.yaml
+++ b/clusters/cl02do/deployment/stack/templates/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: prometheus-operator-crds
+  name: "prometheus-operator-crds-{{ $.Values.destination }}"
   namespace: {{ .Release.Namespace }}
   finalizers:
     - resources-finalizer.argocd.argoproj.io
@@ -22,7 +22,7 @@ spec:
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: metrics-server
+  name: "metrics-server-{{ $.Values.destination }}"
   namespace: {{ .Release.Namespace }}
   finalizers:
     - resources-finalizer.argocd.argoproj.io
