--- a/clusters/cl02do/deployment/stack/values.yaml
+++ b/clusters/cl02do/deployment/stack/values.yaml
@@ -7,7 +7,7 @@ applicationSet:
   - name: applications
     syncPolicy:
       automated:
-        enabled: false
+        enabled: true
         prune: true
         selfheal: false
       syncOptions:
@@ -19,7 +19,7 @@ applicationSet:
     namespace: argocd
     syncPolicy:
       automated:
-        enabled: false
+        enabled: true
         prune: true
         selfheal: false
       syncOptions:
@@ -30,7 +30,7 @@ applicationSet:
   - name: platform
     syncPolicy:
       automated:
-        enabled: false
+        enabled: true
         prune: true
         selfheal: false
       syncOptions:
@@ -41,18 +41,7 @@ applicationSet:
   - name: services
     syncPolicy:
       automated:
-        enabled: false
-        prune: true
-        selfheal: false
-      syncOptions:
-        - CreateNamespace=true
-        - ApplyOutOfSyncOnly=true
-        - ServerSideApply=true
-        - PruneLast=true
-  - name: storage
-    syncPolicy:
-      automated:
-        enabled: false
+        enabled: true
         prune: true
         selfheal: false
       syncOptions:
@@ -68,6 +57,10 @@ application:
       revision: HEAD
       path: standalone/prometheus-operator-crds
     syncPolicy:
+      automated:
+        enabled: true
+        prune: true
+        selfheal: false    
       retry:
         limit: 10
         backoff:
@@ -86,6 +79,10 @@ application:
       revision: HEAD
       path: standalone/metrics-server
     syncPolicy:
+      automated:
+        enabled: true
+        prune: true
+        selfheal: false    
       retry:
         limit: 10
         backoff:
