change application to use path basename as release

--- a/clusters/cl02do/deployment/stack/templates/application-set.yaml
+++ b/clusters/cl02do/deployment/stack/templates/application-set.yaml
@@ -36,6 +36,8 @@ spec:
         repoURL: {{ $.Values.git.repo }}
         targetRevision: {{ $.Values.git.revision }}
         path: '{{ `{{path}}` }}'
+        helm:
+          releaseName: '{{ `{{path.basename}}` }}'
       syncPolicy:
         {{- if $stack.syncPolicy.automated.enabled }}
         automated:
