--- a/clusters/cl02do/deployment/stack/values.yaml
+++ b/clusters/cl02do/deployment/stack/values.yaml
@@ -60,9 +60,8 @@ application:
         releaseName: prometheus-operator-crds
     syncPolicy:
       automated:
-        enabled: true
         prune: true
-        selfheal: false
+        selfheal: true
       retry:
         limit: 10
         backoff:
@@ -84,9 +83,8 @@ application:
         releaseName: metrics-server
     syncPolicy:
       automated:
-        enabled: true
         prune: true
-        selfheal: false
+        selfheal: true
       retry:
         limit: 10
         backoff:
