disable signing key job

--- a/clusters/cl02do/platform/matrix-synapse/values.yaml
+++ b/clusters/cl02do/platform/matrix-synapse/values.yaml
@@ -4,7 +4,7 @@ matrix-synapse:
   argoCD: true
   signingkey:
     job:
-      enabled: true
+      enabled: false
   config:
     reportStats: false
     enableRegistration: true
