add config to extra config

--- a/clusters/cl02do/platform/matrix-synapse/values.yaml
+++ b/clusters/cl02do/platform/matrix-synapse/values.yaml
@@ -9,6 +9,17 @@ matrix-synapse:
     reportStats: false
     enableRegistration: true
     trustedKeyServers: []
+  extraConfig:
+    enable_metrics: true
+    enable_registration_without_verification: false
+    password_config:
+      enabled: false
+    sso:
+      client_whitelist:
+        - https://chat.alexlebens.dev/
+      update_profile_information: true
+    password_config:
+      enabled: false      
   synapse:
     strategy:
       type: Recreate
