--- a/clusters/cl02do/platform/matrix-synapse/values.yaml
+++ b/clusters/cl02do/platform/matrix-synapse/values.yaml
@@ -43,100 +43,16 @@ matrix-synapse:
         readOnly: true
     resources:
       limits:
-        cpu: 100m
-        memory: 300Mi
+        cpu: 200m
+        memory: 500Mi
       requests:
         cpu: 50m
         memory: 100Mi
   workers:
     default:
-      replicaCount: 1
-      strategy:
-        type: Recreate
-      resources:
-        limits:
-          cpu: 100m
-          memory: 300Mi
-        requests:
-          cpu: 50m
-          memory: 100Mi
+      replicaCount: 0
     generic_worker:
-      enabled: true
-      generic: true
-      listeners: [client]
-      csPaths:
-        ## Sync requests
-        # - "/_matrix/client/(r0|v3)/sync$"
-        - "/_matrix/client/(api/v1|r0|v3)/events$"
-        # - "/_matrix/client/(api/v1|r0|v3)/initialSync$"
-        # - "/_matrix/client/(api/v1|r0|v3)/rooms/[^/]+/initialSync$"
-
-        ## Client API requests
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/createRoom$"
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/publicRooms$"
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/joined_members$"
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/context/"
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/members$"
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/state$"
-        - "/_matrix/client/v1/rooms/.*/hierarchy$"
-        - "/_matrix/client/unstable/org.matrix.msc2716/rooms/.*/batch_send$"
-        - "/_matrix/client/unstable/im.nheko.summary/rooms/.*/summary$"
-        - "/_matrix/client/(r0|v3|unstable)/account/3pid$"
-        - "/_matrix/client/(r0|v3|unstable)/account/whoami$"
-        - "/_matrix/client/(r0|v3|unstable)/devices$"
-        - "/_matrix/client/versions$"
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/voip/turnServer$"
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/event/"
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/joined_rooms$"
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/search$"
-
-        ## Encryption requests
-        - "/_matrix/client/(r0|v3|unstable)/keys/query$"
-        - "/_matrix/client/(r0|v3|unstable)/keys/changes$"
-        - "/_matrix/client/(r0|v3|unstable)/keys/claim$"
-        - "/_matrix/client/(r0|v3|unstable)/room_keys/"
-
-        ## Registration/login requests
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/login$"
-        - "/_matrix/client/(r0|v3|unstable)/register$"
-        - "/_matrix/client/v1/register/m.login.registration_token/validity$"
-
-        ## Event sending requests
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/redact"
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/send"
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/state/"
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/(join|invite|leave|ban|unban|kick)$"
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/join/"
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/profile/"
-
-        ## User directory search requests
-        - "/_matrix/client/(r0|v3|unstable)/user_directory/search"
-
-        ## The typing event stream
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/rooms/.*/typing"
-
-        ## The to_device event stream
-        - "/_matrix/client/(r0|v3|unstable)/sendToDevice/"
-
-        ## The account_data event stream
-        - "/_matrix/client/(r0|v3|unstable)/.*/tags"
-        - "/_matrix/client/(r0|v3|unstable)/.*/account_data"
-
-        ## The receipts event stream
-        - "/_matrix/client/(r0|v3|unstable)/rooms/.*/receipt"
-        - "/_matrix/client/(r0|v3|unstable)/rooms/.*/read_markers"
-
-        ## The presence event stream
-        - "/_matrix/client/(api/v1|r0|v3|unstable)/presence/"
-
-        ## OpenID Connect requests
-        - ^/_matrix/client/(api/v1|r0|v3|unstable)/login/sso/redirect
-        - ^/_synapse/client/pick_idp$
-        - ^/_synapse/client/pick_username
-        - ^/_synapse/client/new_user_consent$
-        - ^/_synapse/client/sso_register$
-        - ^/_synapse/client/oidc/callback$
-
+      enabled: false
     pusher:
       enabled: false
     appservice:
@@ -144,18 +60,7 @@ matrix-synapse:
     federation_sender:
       enabled: false
     media_repository:
-      enabled: true
-      listeners: [media]
-      csPaths:
-        - "/_matrix/media/.*"
-        - "/_synapse/admin/v1/purge_media_cache$"
-        - "/_synapse/admin/v1/room/.*/media"
-        - "/_synapse/admin/v1/user/.*/media"
-        - "/_synapse/admin/v1/media/"
-        - "/_synapse/admin/v1/quarantine_media/"
-        - "/_synapse/admin/v1/users/.*/media$"
-      paths:
-        - "/_matrix/media/.*"
+      enabled: false
     user_dir:
       enabled: false
   wellknown:
