--- a/clusters/cl02do/applications/outline/templates/external-secret.yaml
+++ b/clusters/cl02do/applications/outline/templates/external-secret.yaml
@@ -131,14 +131,14 @@ spec:
     kind: ClusterSecretStore
     name: vault
   data:
-    - secretKey: AWS_ACCESS_KEY_ID
+    - secretKey: AWS_SECRET_KEY_ID
       remoteRef:
         conversionStrategy: Default
         decodingStrategy: None
         key: /digital-ocean/alexlebens-dev/auth
         metadataPolicy: None
         property: ACCESS_KEY_ID
-    - secretKey: AWS_ACCESS_SECRET_KEY
+    - secretKey: AWS_SECRET_ACCESS_KEY
       remoteRef:
         conversionStrategy: Default
         decodingStrategy: None
