--- a/clusters/cl02do/applications/outline/templates/external-secret.yaml
+++ b/clusters/cl02do/applications/outline/templates/external-secret.yaml
@@ -131,7 +131,7 @@ spec:
     kind: ClusterSecretStore
     name: vault
   data:
-    - secretKey: AWS_SECRET_KEY_ID
+    - secretKey: AWS_ACCESS_KEY_ID
       remoteRef:
         conversionStrategy: Default
         decodingStrategy: None
