--- a/clusters/cl02do/platform/matrix-synapse/Chart.yaml
+++ b/clusters/cl02do/platform/matrix-synapse/Chart.yaml
@@ -12,6 +12,12 @@ dependencies:
   - name: matrix-hookshot
     version: 0.1.0
     repository: http://alexlebens.github.io/helm-charts
+  - name: mautrix-discord
+    version: 0.0.1
+    repository: http://alexlebens.github.io/helm-charts
+  - name: mautrix-whatsapp
+    version: 0.0.1
+    repository: http://alexlebens.github.io/helm-charts        
   - name: redis
     version: 18.19.4
     repository: https://charts.bitnami.com/bitnami
