--- a/clusters/cl02do/services/loki/values.yaml
+++ b/clusters/cl02do/services/loki/values.yaml
@@ -4,6 +4,8 @@ loki:
     auth_enabled: true
     commonConfig:
       replication_factor: 1
+    limits_config:
+      allow_structured_metadata: false
     storage:
       type: filesystem
     schemaConfig:
@@ -33,6 +35,10 @@ loki:
     replicas: 0
   backend:
     replicas: 0
+  resultsCache:
+    enabled: false
+  chunksCache:
+    enabled: false
 promtail:
   daemonset:
     enabled: true
