--- a/clusters/cl02do/services/traefik/values.yaml
+++ b/clusters/cl02do/services/traefik/values.yaml
@@ -59,3 +59,5 @@ traefik:
   service:
     enabled: true
     type: LoadBalancer
+    annotations:
+      service.beta.kubernetes.io/do-loadbalancer-size-unit: "1"
