--- a/clusters/cl02do/platform/matrix-synapse/values.yaml
+++ b/clusters/cl02do/platform/matrix-synapse/values.yaml
@@ -57,11 +57,11 @@ matrix-synapse:
         readOnly: true
     resources:
       limits:
-        cpu: 200m
-        memory: 500Mi
+        cpu: 500m
+        memory: 256Mi
       requests:
         cpu: 50m
-        memory: 100Mi
+        memory: 128Mi
   workers:
     default:
       replicaCount: 0
@@ -128,6 +128,14 @@ matrix-synapse:
         hosts:
           - matrix.alexlebens.dev
 matrix-hookshot:
+  deployment:
+    resources:
+      limits:
+        cpu: 100m
+        memory: 128Mi
+      requests:
+        cpu: 10m
+        memory: 64Mi
   ingress:
     webhook:
       enabled: true
@@ -158,8 +166,16 @@ redis:
       enabled: false
   replica:
     persistence:
-      enabled: false  
+      enabled: false
 mautrix-discord:
+  deployment:
+    resources:
+      limits:
+        cpu: 100m
+        memory: 128Mi
+      requests:
+        cpu: 10m
+        memory: 64Mi
   ingress:
     enabled: true
     className: traefik
@@ -175,6 +191,14 @@ mautrix-discord:
     existingSecret: mautrix-discord-config-secret
     existingRegistrationSecret: mautrix-discord-config-secret
 mautrix-whatsapp:
+  deployment:
+    resources:
+      limits:
+        cpu: 100m
+        memory: 128Mi
+      requests:
+        cpu: 10m
+        memory: 64Mi
   ingress:
     enabled: true
     className: traefik
