--- a/clusters/cl02do/standalone/metrics-server/values.yaml
+++ b/clusters/cl02do/standalone/metrics-server/values.yaml
@@ -1,11 +1,12 @@
 metrics-server:
-  replicas: 1
   metrics:
     enabled: true
   serviceMonitor:
     enabled: true
-  defaultArgs:
-    - --cert-dir=/tmp
-    - --kubelet-preferred-address-types=InternalIP,ExternalIP,Hostname
-    - --kubelet-use-node-status-port
-    - --metric-resolution=15s
+  resources:
+    limits:
+      cpu: 100m
+      memory: 128Mi  
+    requests:
+      cpu: 10m
+      memory: 64Mi
