--- a/clusters/cl02do/platform/authentik/values.yaml
+++ b/clusters/cl02do/platform/authentik/values.yaml
@@ -87,7 +87,7 @@ authentik:
     resources:
       limits:
         cpu: 1500m
-        memory: 512MI
+        memory: 512Mi
       requests:
         cpu: 50m
         memory: 256Mi
