fix database name

--- a/clusters/cl02do/applications/ghost/values.yaml
+++ b/clusters/cl02do/applications/ghost/values.yaml
@@ -39,7 +39,7 @@ ghost:
     host: private-db-postgresql-nyc1-cl02do-do-user-13463908-0.c.db.ondigitalocean.com
     port: 25061
     user: ghost
-    database: ghost
+    database: ghost-pool
     existingSecret: ghost-postgresql-secret
     ssl: true
     sslCaFile: /etc/ssl/certs/do-ca.crt
