--- a/clusters/cl02do/applications/ghost/templates/external-secret.yaml
+++ b/clusters/cl02do/applications/ghost/templates/external-secret.yaml
@@ -20,54 +20,25 @@ spec:
         decodingStrategy: None
         key: /ghost/auth
         metadataPolicy: None
-        property: password
-
----
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: ghost-postgresql-secret
-  namespace: {{ .Release.Namespace }}
-  labels:
-    app.kubernetes.io/name: ghost-postgresql-secret
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion }}
-    app.kubernetes.io/component: web
-    app.kubernetes.io/part-of: {{ .Release.Name }}
-spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: vault
-  data:
+        property: ghost-password
+    - secretKey: mysql-root-password
+      remoteRef:
+        conversionStrategy: Default
+        decodingStrategy: None
+        key: /ghost/auth
+        metadataPolicy: None
+        property: mysql-root-password
+    - secretKey: mysql-replication-password
+      remoteRef:
+        conversionStrategy: Default
+        decodingStrategy: None
+        key: /ghost/auth
+        metadataPolicy: None
+        property: mysql-replication-password
     - secretKey: mysql-password
       remoteRef:
         conversionStrategy: Default
         decodingStrategy: None
-        key: /digital-ocean/alexlebens-dev/ghost
+        key: /ghost/auth
         metadataPolicy: None
-        property: password
-
----
-apiVersion: external-secrets.io/v1beta1
-kind: ExternalSecret
-metadata:
-  name: ghost-postgresql-ssl-secret
-  namespace: {{ .Release.Namespace }}
-  labels:
-    app.kubernetes.io/name: ghost-postgresql-ssl-secret
-    app.kubernetes.io/instance: {{ .Release.Name }}
-    app.kubernetes.io/version: {{ .Chart.AppVersion }}
-    app.kubernetes.io/component: web
-    app.kubernetes.io/part-of: {{ .Release.Name }}
-spec:
-  secretStoreRef:
-    kind: ClusterSecretStore
-    name: vault
-  data:
-    - secretKey: do-ca.crt
-      remoteRef:
-        conversionStrategy: Default
-        decodingStrategy: None
-        key: /digital-ocean/alexlebens-dev/ghost
-        metadataPolicy: None
-        property: ca.crt
+        property: mysql-password
