increase startup probe threshold

--- a/clusters/cl02do/applications/ghost/values.yaml
+++ b/clusters/cl02do/applications/ghost/values.yaml
@@ -48,3 +48,5 @@ ghost:
           - ReadWriteOnce
         size: 10Gi
       resourcesPreset: nano
+      startupProbe:
+        failureThreshold: 30
