--- a/clusters/cl02do/applications/ghost/values.yaml
+++ b/clusters/cl02do/applications/ghost/values.yaml
@@ -28,7 +28,7 @@ ghost:
     type: sqlite
     sqliteDatabaseFile: "content/data/ghost.db"
   settings:
-    url: ghost.alexlebens.dev
+    url: https://ghost.alexlebens.dev
     logToStdout: true
     mode: production
   storage:
