--- a/clusters/cl02do/services/tailscale-operator/values.yaml
+++ b/clusters/cl02do/services/tailscale-operator/values.yaml
@@ -9,7 +9,7 @@ tailscale-operator:
       tag: v1.64.2
       pullPolicy: Always
     logging: info
-    hostname: tailscale-operator
+    hostname: tailscale-operator-cl02do
     nodeSelector:
       kubernetes.io/os: linux
   proxyConfig:
