--- a/clusters/cl02do/platform/external-secrets/templates/cluster-secret-store.yaml
+++ b/clusters/cl02do/platform/external-secrets/templates/cluster-secret-store.yaml
@@ -19,3 +19,26 @@ spec:
           namespace: vault
           name: vault-token
           key: token
+
+---
+apiVersion: external-secrets.io/v1beta1
+kind: ClusterSecretStore
+metadata:
+  name: vault-cl01tl
+  namespace: {{ .Release.Namespace }}
+  labels:
+    app.kubernetes.io/name: vault-cl01tl
+    app.kubernetes.io/instance: {{ .Release.Name }}
+    app.kubernetes.io/version: {{ .Chart.AppVersion }}
+    app.kubernetes.io/component: auth
+    app.kubernetes.io/part-of: {{ .Release.Name }}
+spec:
+  provider:
+    vault:
+      server: https://vault-api-cl01tl.tailscale-operator
+      path: secret
+      auth:
+        tokenSecretRef:
+          namespace: external-secrets
+          name: vault-token
+          key: token
