--- a/clusters/cl02do/platform/external-secrets/templates/cluster-secret-store.yaml
+++ b/clusters/cl02do/platform/external-secrets/templates/cluster-secret-store.yaml
@@ -24,10 +24,10 @@ spec:
 apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
-  name: vault-service-cl01tl
+  name: vault-cl01tl
   namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: vault-service-cl01tl
+    app.kubernetes.io/name: vault-cl01tl
     app.kubernetes.io/instance: {{ .Release.Name }}
     app.kubernetes.io/version: {{ .Chart.AppVersion }}
     app.kubernetes.io/component: auth
@@ -35,7 +35,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: http://vault-service-cl01tl.external-secrets
+      server: http://vault-cl01tl.external-secrets
       path: secret
       auth:
         tokenSecretRef:
