--- a/clusters/cl02do/platform/external-secrets/templates/service.yaml
+++ b/clusters/cl02do/platform/external-secrets/templates/service.yaml
@@ -12,5 +12,5 @@ metadata:
   annotations:
     tailscale.com/tailnet-fqdn: vault-vault-active.boreal-beaufort.ts.net
 spec:
-  externalName: ts-vault-cl01tl-x9j8k.tailscale-operator.svc.cluster.local
+  externalName: ts-vault-cl01tl-b779b.tailscale-operator.svc.cluster.local
   type: ExternalName
