--- a/clusters/cl02do/platform/external-secrets/templates/cluster-secret-store.yaml
+++ b/clusters/cl02do/platform/external-secrets/templates/cluster-secret-store.yaml
@@ -35,7 +35,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: https://vault-cl01tl.external-secrets:8201
+      server: https://vault-cl01tl.external-secrets
       path: secret
       auth:
         tokenSecretRef:
