--- a/clusters/cl02do/platform/external-secrets/templates/cluster-secret-store.yaml
+++ b/clusters/cl02do/platform/external-secrets/templates/cluster-secret-store.yaml
@@ -12,7 +12,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: http://vault-internal.vault:8200
+      server: http://vault.vault:8200
       path: secret
       auth:
         tokenSecretRef:
@@ -35,7 +35,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: https://vault-cl01tl.external-secrets
+      server: http://vault-cl01tl.external-secrets
       path: secret
       auth:
         tokenSecretRef:
