use api ingress

--- a/clusters/cl02do/platform/external-secrets/templates/cluster-secret-store.yaml
+++ b/clusters/cl02do/platform/external-secrets/templates/cluster-secret-store.yaml
@@ -35,7 +35,7 @@ metadata:
 spec:
   provider:
     vault:
-      server: http://ts-vault-cl01tl-b779b.tailscale-operator.svc.cluster.local:8200
+      server: https://vault-api-cl01tl.external-secrets
       path: secret
       auth:
         tokenSecretRef:
