--- a/clusters/cl02do/platform/external-secrets/templates/service.yaml
+++ b/clusters/cl02do/platform/external-secrets/templates/service.yaml
@@ -12,5 +12,5 @@ metadata:
   annotations:
     tailscale.com/tailnet-fqdn: vault-api-cl01tl.boreal-beaufort.ts.net
 spec:
-  externalName: placeholder
+  externalName: ts-vault-api-cl01tl-np582.tailscale-operator.svc.cluster.local
   type: ExternalName
