--- a/clusters/cl02do/platform/external-secrets/templates/service.yaml
+++ b/clusters/cl02do/platform/external-secrets/templates/service.yaml
@@ -10,7 +10,7 @@ metadata:
     app.kubernetes.io/component: web
     app.kubernetes.io/part-of: {{ .Release.Name }}
   annotations:
-    tailscale.com/tailnet-fqdn: vault-api-cl01tl.boreal-beaufort.ts.net
+    tailscale.com/tailnet-ip: 100.95.46.19
 spec:
   externalName: ts-vault-api-cl01tl-np582.tailscale-operator.svc.cluster.local
   type: ExternalName
